sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var n:Int = getNombreValeurs() - 1
  var i:Int = 0
  while (i < n-2){
    if (plusPetit(i+1,i)){echange(i,i+1); i=i-1}
    else{i=i+1}
    if (i==-1){i=1}
  }
}